load the static files

--- a/skillup/templates/login.html
+++ b/skillup/templates/login.html
@@ -1,30 +1,94 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html>
+
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CNF Login</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <script type="module" src="{% static 'js/auth.js' %}"></script>
-  </head>
-  <body>
-    <div class="container mt-5">
-      <h2>Login to Skill-Up CNF</h2>
-      <form id="login-form">
-        <div class="mb-3">
-          <label class="form-label">Knox ID</label>
-          <input type="text" id="knox_id" required>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <title>Sign In | Bootstrap Based Admin Template - Material Design</title>
+    <!-- Favicon-->
+    <link rel="icon" href="{% static 'bsbmaterial/favicon.ico' %}" type="image/x-icon">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
+
+    <!-- Bootstrap Core Css -->
+    <link href="{% static 'bsbmaterial/plugins/bootstrap/css/bootstrap.css' %}" rel="stylesheet">
+
+    <!-- Waves Effect Css -->
+    <link href="{% static 'bsbmaterial/plugins/node-waves/waves.css' %}" rel="stylesheet" />
+
+    <!-- Animation Css -->
+    <link href="{% static 'bsbmaterial/plugins/animate-css/animate.css' %}" rel="stylesheet" />
+
+    <!-- Custom Css -->
+    <link href="{% static 'bsbmaterial/css/style.css' %}" rel="stylesheet">
+</head>
+
+<body class="login-page">
+    <div class="login-box">
+        <div class="logo">
+            <a href="javascript:void(0);">Admin<b>BSB</b></a>
+            <small>Admin BootStrap Based - Material Design</small>
         </div>
-        <div class="mb-3">
-          <label class="form-label">Password</label>
-          <input type="password" id="password" name="password" required>
-          <label><input type="checkbox" id="toggle-password"> Show Password</label>
+        <div class="card">
+            <div class="body">
+                <form id="sign_in" method="POST">
+                    <div class="msg">Sign in to start your session</div>
+                    <div class="input-group">
+                        <span class="input-group-addon">
+                            <i class="material-icons">person</i>
+                        </span>
+                        <div class="form-line">
+                            <input type="text" class="form-control" name="username" placeholder="Username" required autofocus>
+                        </div>
+                    </div>
+                    <div class="input-group">
+                        <span class="input-group-addon">
+                            <i class="material-icons">lock</i>
+                        </span>
+                        <div class="form-line">
+                            <input type="password" class="form-control" name="password" placeholder="Password" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-8 p-t-5">
+                            <input type="checkbox" name="rememberme" id="rememberme" class="filled-in chk-col-pink">
+                            <label for="rememberme">Remember Me</label>
+                        </div>
+                        <div class="col-xs-4">
+                            <button class="btn btn-block bg-pink waves-effect" type="submit">SIGN IN</button>
+                        </div>
+                    </div>
+                    <div class="row m-t-15 m-b--20">
+                        <div class="col-xs-6">
+                            <a href="sign-up.html">Register Now!</a>
+                        </div>
+                        <div class="col-xs-6 align-right">
+                            <a href="forgot-password.html">Forgot Password?</a>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
-        <button type="submit">Login</button>
-      </form>
-      <p class="mt-3">Don't have an account? <a href="{% url 'register-user' %}">Register Here</a></p>
-      <div id="server-error" class="text-danger mt-3"></div>
     </div>
-  </body>
+
+    <!-- Jquery Core Js -->
+    <script src="{% static 'bsbmaterial/plugins/jquery/jquery.min.js' %}"></script>
+
+    <!-- Bootstrap Core Js -->
+    <script src="{% static 'bsbmaterial/plugins/bootstrap/js/bootstrap.js' %}"></script>
+
+    <!-- Waves Effect Plugin Js -->
+    <script src="{% static 'bsbmaterial/plugins/node-waves/waves.js' %}"></script>
+
+    <!-- Validation Plugin Js -->
+    <script src="{% static 'bsbmaterial/plugins/jquery-validation/jquery.validate.js' %}"></script>
+
+    <!-- Custom Js -->
+    <script src="{% static 'bsbmaterial/js/admin.js' %}"></script>
+    <script src="{% static 'bsbmaterial/js/pages/examples/sign-in.js' %}"></script>
+</body>
+
 </html>
